Fix overflow issue with modals

--- a/src/main/resources/META-INF/resources/rbs/css/rbs.css
+++ b/src/main/resources/META-INF/resources/rbs/css/rbs.css
@@ -23,7 +23,7 @@ textarea.form-control {
 
 /*
 form-group checkboxes
-*/  
+*/
 .form-group > input[type="checkbox"].form-control {
     float: left;
     margin-right: 0.3em;
@@ -77,7 +77,7 @@ so they're removed from the DOM when they're not
 */
 .modal {
     display: block !important;
-    overflow-y: auto;
+    overflow-y: auto !important;
     opacity: 1;
 }
 
